<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        tools:context="com.visitoslo.tourguide.HomeFragment">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:scaleType="centerCrop"
            android:src="@drawable/header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin10"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oslo_pass"
                android:textColor="@color/blueHeaderFont"
                android:textSize="@dimen/mediumText" />

            <TextView
                style="@style/NormalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin5"
                android:gravity="left"
                android:text="@string/oslo_pass_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oslo_pass_price"
                android:textColor="@color/blueHeaderFont"
                android:textSize="@dimen/mediumText" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/NormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adult"
                    android:textStyle="bold" />

                <TextView
                    style="@style/NormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/margin20"
                    android:text="@string/adult_price_24h" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/NormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/child"
                    android:textStyle="bold" />

                <TextView
                    style="@style/NormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/margin20"
                    android:text="@string/child_price_24h" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/NormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/senior"
                    android:textStyle="bold" />

                <TextView
                    style="@style/NormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/margin10"
                    android:text="@string/senior_price_24h" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="170dp"
                android:src="@drawable/oslo_pass" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>